performed some data cleaning in custom analysis of two numeric values and in general analysis

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def General_Analysis(df):\n",
+    "\n",
+    "    null_values = df.isnull().sum()\n",
+    "    dup = df.duplicated().sum()\n",
+    "\n",
+    "    # Data Cleaning\n",
+    "    missing_values = df.isnull().sum()\n",
+    "    missing_columns = missing_values[missing_values > 0].index.tolist()\n",
+    "    \n",
+    "    for col in missing_columns:\n",
+    "        if df[col].dtype=='object':\n",
+    "            df[col]=df[col].fillna(df[col].mode()[0])\n",
+    "        else: \n",
+    "            df[col] = df[col].fillna(df[col].median()) \n",
+    "\n",
+    "\n",
+    "\n",
     "    print(\"\\n\" + \"=\" * 60)\n",
     "    print(\"GENERAL ANALYSIS OF THE DATAFRAME\".center(60))\n",
     "    print(\"=\" * 60 + \"\\n\")\n",
@@ -122,7 +138,7 @@
     "    print(info)\n",
     "    print(\"\\n\")\n",
     "    print(\"MISSING VALUES IN EACH COLUMN\".center(60, \"-\"))\n",
-    "    null_values = df.isnull().sum()\n",
+    "   \n",
     "    print(null_values)\n",
     "    print(\"\\n\")\n",
     "    numdf = df.select_dtypes(include=['number']).fillna(0)\n",
@@ -139,7 +155,7 @@
     "    print(tabulate(tail, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
     "    print(\"DUPLICATE ROWS\".center(60, \"-\"))\n",
-    "    dup = df.duplicated().sum()\n",
+    "    \n",
     "    print(f\"Number of Duplicate Rows: {dup}\")\n",
     "    print(\"\\n\")\n",
     "    print(\"CORRELATION MATRIX (NUMERICAL COLUMNS)\".center(60, \"-\"))\n",
@@ -171,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,27 +309,34 @@
     "    if(df[col2].isna().all() or (df[col2]==\"\").all()):\n",
     "        print(f'column {col2} is completely Empty !')\n",
     "\n",
-    "    print(df[col1_actual], \"hello -1\")\n",
-    "    print(df[col2_actual], \"hello 0\")\n",
+    "    # print(df[col1_actual], \"hello -1\")\n",
+    "    # print(df[col2_actual], \"hello 0\")\n",
     "    df[col1_actual] = pd.to_numeric(df[col1_actual], errors='coerce')\n",
     "    df[col2_actual] = pd.to_numeric(df[col2_actual], errors='coerce')\n",
     "    \n",
     "    # this wont work in diwali sales cause status and unamed are totally empty so it will delete all rows\n",
     "    # df.dropna(inplace=True)  \n",
-    "    \n",
-    "    column1_data = df[col1_actual]\n",
-    "    column2_data = df[col2_actual]\n",
-    "    print(df[col1_actual], \"hello 0.25\")\n",
-    "    print(df[col2_actual], \"hello 0.35\")\n",
-    "    print(column1_data, \"hello 0.5\")\n",
-    "    print(column2_data, \"hello 0.75\")\n",
-    "    \n",
     "\n",
+    "    column1_data=df[col1_actual]\n",
+    "    column2_data=df[col2_actual]\n",
+    "    null_count_col1 = column1_data.isnull().sum()\n",
+    "    null_count_col2 = column2_data.isnull().sum()\n",
+    "\n",
+    "    # Data Cleaning\n",
+    "    column1_data = column1_data.dropna()\n",
+    "    column2_data = column2_data.dropna()\n",
+    "    # print(df[col1_actual], \"hello 0.25\")\n",
+    "    # print(df[col2_actual], \"hello 0.35\")\n",
+    "    # print(column1_data, \"hello 0.5\")\n",
+    "    # print(column2_data, \"hello 0.75\")\n",
+    "    \n",
+    "    # print(column1_data, \" hello 0\")\n",
+    "    # print(column2_data, \" hello 1\")\n",
     "    print(\"=============================== Preview ================================\")\n",
     "    column1_data_df = column1_data.head().to_frame()\n",
     "    column2_data_df = column2_data.head().to_frame()\n",
-    "    print(column1_data_df, \"hello 1\")\n",
-    "    print(column2_data_df, \"hello 2\")\n",
+    "    # print(column1_data_df, \"hello 1\")\n",
+    "    # print(column2_data_df, \"hello 2\")\n",
     "    print(f\"Data for {col1_actual}:\\n\", tabulate(column1_data_df, headers='keys', tablefmt='psql'), \"\\n\")\n",
     "    print(f\"Data for {col2_actual}:\\n\", tabulate(column2_data_df, headers='keys', tablefmt='psql'), \"\\n\")\n",
     "    print(f\"================================ Summary Statistics for {col1_actual} ======================================\")\n",
@@ -328,15 +351,12 @@
     "    column2_stats_df = column2_stats.to_frame().reset_index()\n",
     "    print(tabulate(column2_stats_df, headers=['Statistic', col2_actual], tablefmt='psql'), \"\\n\")\n",
     "    # print(column2_data.describe(), \"\\n\")\n",
-    "    null_count_col1 = column1_data.isnull().sum()\n",
-    "    empty_count_col1 = (column1_data.eq('')).sum()\n",
-    "    null_count_col2 = column2_data.isnull().sum()\n",
-    "    empty_count_col2 = (column2_data.eq('')).sum()\n",
+    "    \n",
     "    print(f\"Null values in {col1_actual}: {null_count_col1}\")\n",
-    "    print(f\"Empty values in {col1_actual}: {empty_count_col1}\\n\")\n",
+    "    # print(f\"Empty values in {col1_actual}: {empty_count_col1}\\n\")\n",
     "    \n",
     "    print(f\"Null values in {col2_actual}: {null_count_col2}\")\n",
-    "    print(f\"Empty values in {col2_actual}: {empty_count_col2}\\n\")\n",
+    "    # print(f\"Empty values in {col2_actual}: {empty_count_col2}\\n\")\n",
     "    correlation = column1_data.corr(column2_data)\n",
     "    print(f\"Correlation between {col1_actual} and {col2_actual}: {correlation}\\n\")\n",
     "\n",
@@ -410,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +862,9 @@
     "    else:\n",
     "        print(\"Please Enter Valid Choice !\")\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data_1.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset.csv\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset_1.csv\n",
     "# D:\\\\shivam\n"
    ]
   }
