fixed some errors in general anlysis, alignment of labels in graphs and charts

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,25 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def General_Analysis(df):\n",
     "\n",
-    "    null_values = df.isnull().sum()\n",
+    "    null_values=df.isnull().sum()\n",
     "    dup = df.duplicated().sum()\n",
     "\n",
     "    # Data Cleaning\n",
-    "    missing_values = df.isnull().sum()\n",
-    "    missing_columns = missing_values[missing_values > 0].index.tolist()\n",
+    "    missing_values=df.isnull().sum()\n",
+    "    missing_columns=missing_values[missing_values>0].index.tolist()\n",
     "    \n",
     "    for col in missing_columns:\n",
     "        if df[col].dtype=='object':\n",
     "            df[col]=df[col].fillna(df[col].mode()[0])\n",
     "        else: \n",
-    "            df[col] = df[col].fillna(df[col].median()) \n",
+    "            if df[col].dropna().shape[0] > 0:  \n",
+    "                df[col] = df[col].fillna(df[col].median())  \n",
+    "            else:\n",
+    "                df[col] = df[col].fillna(0)  \n",
     "\n",
     "\n",
     "\n",
@@ -158,22 +161,25 @@
     "    \n",
     "    print(f\"Number of Duplicate Rows: {dup}\")\n",
     "    print(\"\\n\")\n",
-    "    print(\"CORRELATION MATRIX (NUMERICAL COLUMNS)\".center(60, \"-\"))\n",
-    "    corr_matrix = numdf.corr()\n",
-    "    print(tabulate(corr_matrix, headers='keys', tablefmt='psql'))\n",
-    "    print(\"\\n\")\n",
-    "    rows, cols = corr_matrix.shape\n",
-    "    max_label_length = max(len(label) for label in corr_matrix.columns)\n",
-    "    fig_width = max(8, cols * 0.5, max_label_length * 0.5)\n",
-    "    fig_height = max(6, rows * 0.5)\n",
-    "    plt.figure(figsize=(fig_width, fig_height))\n",
-    "    plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
-    "    plt.colorbar()\n",
-    "    plt.xticks(np.arange(cols), corr_matrix.columns, rotation=45, ha=\"right\", fontsize=12)\n",
-    "    plt.yticks(np.arange(rows), corr_matrix.columns, rotation=0, fontsize=12)\n",
-    "    plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "    if not numdf.empty:\n",
+    "        print(\"CORRELATION MATRIX (NUMERICAL COLUMNS)\".center(60, \"-\"))\n",
+    "        corr_matrix = numdf.corr()\n",
+    "        print(tabulate(corr_matrix, headers='keys', tablefmt='psql'))\n",
+    "        print(\"\\n\")\n",
+    "        rows, cols = corr_matrix.shape\n",
+    "        max_label_length = max(len(label) for label in corr_matrix.columns)\n",
+    "        fig_width = max(8, cols * 0.5, max_label_length * 0.5)\n",
+    "        fig_height = max(6, rows * 0.5)\n",
+    "        plt.figure(figsize=(fig_width, fig_height))\n",
+    "        plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
+    "        plt.colorbar()\n",
+    "        plt.xticks(np.arange(cols), corr_matrix.columns, rotation=45, ha=\"right\", fontsize=12)\n",
+    "        plt.yticks(np.arange(rows), corr_matrix.columns, rotation=0, fontsize=12)\n",
+    "        plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        print(\" No Nmerical Column in DF !!!!\")\n",
     "\n",
     "    save = input('Save General Report? (Y/N): ')\n",
     "    if save.lower()==\"y\":\n",
@@ -187,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +476,9 @@
     "        plt.text(i, count + 0.1, str(count), ha='center', fontsize=12, fontweight='bold', color='black')\n",
     "\n",
     "    plt.subplot(2, 2, 2)\n",
-    "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors)\n",
+    "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors,\n",
+    "        startangle=90, labeldistance=1.2, pctdistance=0.8,\n",
+    "        textprops={'rotation_mode': 'anchor', 'fontsize': 10})\n",
     "    plt.title(f\"Distribution of {column_name} (Pie Chart)\")\n",
     "\n",
     "    plt.subplot(2, 2, 3)\n",
@@ -516,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,12 +552,20 @@
     "    plt.xlabel(\"Category\")\n",
     "    plt.ylabel(\"Count\")\n",
     "    plt.title(f\"Distribution of {column_name} (Top {top_n} Categories)\")\n",
+    "    plt.xticks(rotation=45)\n",
     "\n",
     "    for i, count in enumerate(counts):\n",
     "        plt.text(i, count + 0.1, str(count), ha='center', fontsize=12, fontweight='bold', color='black')\n",
     "\n",
     "    plt.subplot(2, 2, 2)  \n",
-    "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors)\n",
+    "    # plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors)\n",
+    "    # plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors,\n",
+    "    #     labeldistance=1.1, pctdistance=0.85, textprops={'fontsize': 10},\n",
+    "    #     wedgeprops={'linewidth': 1, 'edgecolor': 'white'})\n",
+    "\n",
+    "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors,\n",
+    "        startangle=90, labeldistance=1.2, pctdistance=0.8,\n",
+    "        textprops={'rotation_mode': 'anchor', 'fontsize': 10})\n",
     "    plt.title(f\"Distribution of {column_name} (Pie Chart)\")\n",
     "\n",
     "    \n",
@@ -580,6 +596,7 @@
     "    print(f\"Total unique values (Top {top_n} with 'Others'): {len(value_counts)}\")\n",
     "    for label, count in value_counts.items():\n",
     "        print(f\"{label}: {count} occurrences\")\n",
+    "    # print(f\"Total Number of Unique Values in {column_name}: \", )\n",
     "    choice=input(\"want to save this repiort (y/n) ?\")\n",
     "    if(choice.lower()=='y'):\n",
     "        save_string_report(df, column_name, top_n)\n"
@@ -587,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +725,7 @@
     "        print(\"8. Sort Data\")\n",
     "        print(\"9. Filter Data\")\n",
     "        print(\"10. Remove Duplicates\")\n",
-    "        print(\"11. Return\")\n",
+    "        print(\"11. Save and Return\")\n",
     "        \n",
     "        choice = input(\"Enter Choice: \")\n",
     "        \n",
@@ -824,7 +841,9 @@
     "            df.drop_duplicates(inplace=True)\n",
     "            print(\"\\nDuplicates removed successfully!\")\n",
     "        elif choice == \"11\":\n",
-    "            save_dataset(df)\n",
+    "            ch=input('Do you want to save this Edited File ?')\n",
+    "            if(ch.lower()=='y'):\n",
+    "                save_dataset(df)\n",
     "            b = False\n",
     "        else:\n",
     "            print(\"Please Enter a Valid Choice!\")\n"
@@ -862,6 +881,7 @@
     "    else:\n",
     "        print(\"Please Enter Valid Choice !\")\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data_Udated.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data_1.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset_1.csv\n",
