tested complete custom analysis

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"Column Information:\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
-    "            f.write(info + \"\\n\") \n",
+    "            f.write(str(info) + \"\\n\") \n",
     "            f.write(\"\\n\\n\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"Missing Values in Each Column:\\n\")\n",
@@ -67,18 +67,19 @@
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"Descriptive Statistics (Numerical):\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
-    "            f.write(str(des) + \"\\n\")\n",
-    "            # f.write(tabulate(des, headers='keys', tablefmt='psql'))\n",
+    "            # f.write(str(des) + \"\\n\")\n",
+    "            f.write(tabulate(des, headers='keys', tablefmt='psql')+ \"\\n\")\n",
     "            f.write(\"\\n\\n\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"First 5 Rows of the DataFrame:\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
-    "            f.write(str(head) + \"\\n\")\n",
+    "            # f.write(str(head) + \"\\n\")\n",
+    "            f.write(tabulate(head, headers='keys', tablefmt='psql')+ \"\\n\")\n",
     "            f.write(\"\\n\\n\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"Last 5 Rows of the DataFrame:\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
-    "            f.write(str(tail) + \"\\n\")\n",
+    "            f.write(tabulate(tail, headers='keys', tablefmt='psql')+ \"\\n\")\n",
     "            f.write(\"\\n\\n\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(f\"Number of Duplicate Rows: {dup}\\n\")\n",
@@ -86,7 +87,7 @@
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"Correlation Matrix (Numerical Columns):\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
-    "            f.write(str(corr_matrix) + \"\\n\")\n",
+    "            f.write(tabulate(corr_matrix, headers='keys', tablefmt='psql')+ \"\\n\")\n",
     "            f.write(\"\\n\\n\")\n",
     "        \n",
     "        print(f\"Report successfully saved as '{report}'.\")\n",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,6 +377,11 @@
     "\n",
     "\n",
     "\n",
+    "    # jitter_x = np.random.normal(0, (df[col1_actual].max() - df[col1_actual].min()) * 0.02, size=len(df[col1_actual]))\n",
+    "    # jitter_y = np.random.normal(0, (df[col2_actual].max() - df[col2_actual].min()) * 0.02, size=len(df[col2_actual]))\n",
+    "\n",
+    "    # plt.scatter(df[col1_actual] + jitter_x,df[col2_actual] + jitter_y, c='red', alpha=0.4, edgecolor='k', linewidth=0.5)\n",
+    "    # plt.scatter(df[col2_actual] + jitter_x,df[col1_actual] + jitter_y, c='blue', alpha=0.4, edgecolor='k', linewidth=0.5)\n",
     "    jitter_x = np.random.normal(0, (df[col1_actual].max() - df[col1_actual].min()) * 0.02, size=len(df[col1_actual]))\n",
     "    jitter_y = np.random.normal(0, (df[col2_actual].max() - df[col2_actual].min()) * 0.02, size=len(df[col2_actual]))\n",
     "\n",
@@ -436,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
