added data base connection, user class to login and signup using user credentials and reading tables from sql as df and uploading df as table

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,85 @@
     "from io import StringIO\n",
     "from tabulate import tabulate\n",
     "from collections import Counter\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "import mysql.connector\n",
+    "import hashlib\n",
+    "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOST = \"localhost\"\n",
+    "DATABASE = \"data_analysis\"\n",
+    "USER = \"root\"\n",
+    "PASSWORD = \"\"\n",
+    "def get_connection():\n",
+    "    try:\n",
+    "        conn = mysql.connector.connect(\n",
+    "            host=HOST,\n",
+    "            user=USER,\n",
+    "            password=PASSWORD,\n",
+    "            database=DATABASE\n",
+    "        )\n",
+    "        # print(\"Database Connected Successfully!\")\n",
+    "        return conn\n",
+    "    except mysql.connector.Error as e:\n",
+    "        print(\"Database Connection Failed!\")\n",
+    "        print(\"Error:\", e)\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class User:\n",
+    "    def __init__(self, uname, email, passw, num):\n",
+    "       \n",
+    "        self.uname=uname\n",
+    "        self.email=email\n",
+    "        self.passw=passw\n",
+    "        if num==1:\n",
+    "            self.id=self.savetodb( uname, email, passw)\n",
+    "    def setId(self, id1):\n",
+    "        self.id=id1\n",
+    "    def setname(self, name):\n",
+    "        self.uname=name\n",
+    "    def setemail(self, email):\n",
+    "        self.email=email\n",
+    "    def setpass(self, passw):\n",
+    "        self.passw=passw\n",
+    "\n",
+    "    def savetodb(self, uname, email, passw):\n",
+    "         conn = get_connection()\n",
+    "         if conn:\n",
+    "            cursor = conn.cursor()\n",
+    "            sql = \"INSERT INTO users (user_name, user_email, user_password) VALUES (%s, %s, %s)\"\n",
+    "            password=self.hash_password(passw)\n",
+    "            values = (uname, email, password)\n",
+    "            cursor.execute(sql, values)\n",
+    "            conn.commit()  \n",
+    "            # print(\"User inserted successfully!\")\n",
+    "            # cursor=conn.cursor()\n",
+    "            sql= 'select user_Id from users where user_email= %s'\n",
+    "            cursor.execute(sql, (email,))\n",
+    "            id1=cursor.fetchone()\n",
+    "            return id1[0]\n",
+    "    def hash_password(self, password):\n",
+    "        hashed = hashlib.sha256(password.encode()).hexdigest()\n",
+    "        return hashed\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,9 +733,10 @@
     "    b=True\n",
     "    while(b):\n",
     "        print(\"1. Analyze CSV File\")\n",
-    "        print(\"2. Analyze Parquet File\")\n",
-    "        print(\"3. Analyze Excel File\")\n",
-    "        print(\"4. Return\")\n",
+    "        print(\"2. Analyze SQL Table\")\n",
+    "        print(\"3. Analyze Parquet File\")\n",
+    "        print(\"4. Analyze Excel File\")\n",
+    "        print(\"5. Return\")\n",
     "        choice=input(\"Enter Choice: \").strip()\n",
     "        if(choice==\"1\"):\n",
     "          path = input(\"Enter File Path of CSV File: \")\n",
@@ -674,6 +748,18 @@
     "            #   print(\"CSV File not found. Try again !\")\n",
     "               \n",
     "        elif(choice==\"2\"):\n",
+    "              table = input(\"Enter Table name: \")\n",
+    "              try:\n",
+    "                  conn=get_connection()\n",
+    "                  sql=f'select * from {table}'\n",
+    "                  engine = create_engine(\"mysql+pymysql://root:@localhost/data_analysis\")\n",
+    "                  df = pd.read_sql(sql, con=engine)\n",
+    "                  df = pd.read_sql(sql, conn)\n",
+    "                  return df\n",
+    "              except (FileNotFoundError, Exception) as e:\n",
+    "                  print(f\"Error: {e}\")\n",
+    "                  print(\"Parquet File not found. Try again !\")\n",
+    "        elif(choice==\"3\"):\n",
     "              path = input(\"Enter File Path of Parquet File: \")\n",
     "              try:\n",
     "                  df = pd.read_parquet(path)\n",
@@ -681,7 +767,7 @@
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
     "                  print(\"Parquet File not found. Try again !\")\n",
-    "        elif(choice==\"3\"):\n",
+    "        elif(choice==\"4\"):\n",
     "              path = input(\"Enter File Path of Excel File: \")\n",
     "              try:\n",
     "                  df = pd.read_excel(path)\n",
@@ -689,7 +775,7 @@
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
     "                  print(\"Excel File not found. Try again !\")\n",
-    "        elif(choice==\"4\"):\n",
+    "        elif(choice==\"5\"):\n",
     "          # print(\"Exiting Program...\")\n",
     "          b=False\n",
     "        else:\n",
@@ -698,23 +784,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_dataset(df):\n",
     "    \"\"\"Saves the dataset to a user-specified path.\"\"\"\n",
-    "    save_path = input(\"Enter the path to save the edited CSV file: \")\n",
-    "    try:\n",
-    "        df.to_csv(save_path, index=False)\n",
-    "        print(f\"\\nDataset saved successfully at {save_path}!\\n\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error saving dataset: {e}\")"
+    "    b=True\n",
+    "    while b:\n",
+    "        print(\"1. Save as CSV\")\n",
+    "        print(\"2. Save as Table in MySQL\")\n",
+    "        print(\"3. Exit\")\n",
+    "        ch=input('Enter your choice: ')\n",
+    "        if(ch=='1'):\n",
+    "            save_path = input(\"Enter the path to save the edited CSV file: \")\n",
+    "            try:\n",
+    "                df.to_csv(save_path, index=False)\n",
+    "                print(f\"\\nDataset saved successfully at {save_path}!\\n\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error in saving a dataset: {e}\")\n",
+    "        elif ch=='2':\n",
+    "            try:\n",
+    "                name=input('Enter name of the table to save DataFrame as: ')\n",
+    "                engine = create_engine(\"mysql+pymysql://root:@localhost/data_analysis\")\n",
+    "                df.to_sql(name, con=engine, if_exists=\"replace\", index=False)\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error in saving a dataset: {e}\")\n",
+    "        elif ch=='3':\n",
+    "            b=False\n",
+    "        else:\n",
+    "            print('Invalid Choice !')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +829,7 @@
     "        print(\"2. Update an Existing Row\")\n",
     "        print(\"3. Delete a Row\")\n",
     "        print(\"4. Edit Specific Column Data\")\n",
-    "        print(\"5. Fill Missing Data\")\n",
+    "        # print(\"5. Fill Missing Data\")\n",
     "        print(\"6. Rename Columns\")\n",
     "        print(\"7. Change Data Type of a Column\")\n",
     "        print(\"8. Sort Data\")\n",
@@ -768,18 +872,18 @@
     "                print(\"\\nColumn updated successfully!\")\n",
     "            else:\n",
     "                print(\"\\nInvalid column name!\")\n",
-    "        elif choice == \"5\":\n",
-    "            print(\"\\nFilling missing data:\")\n",
-    "            fill_method = input(\"Enter 'mean', 'median', 'mode', or a specific value: \")\n",
-    "            if fill_method == \"mean\":\n",
-    "                df.fillna(df.mean(), inplace=True)\n",
-    "            elif fill_method == \"median\":\n",
-    "                df.fillna(df.median(), inplace=True)\n",
-    "            elif fill_method == \"mode\":\n",
-    "                df.fillna(df.mode().iloc[0], inplace=True)\n",
-    "            else:\n",
-    "                df.fillna(fill_method, inplace=True)\n",
-    "            print(\"\\nMissing values filled successfully!\")\n",
+    "        # elif choice == \"5\":\n",
+    "        #     print(\"\\nFilling missing data:\")\n",
+    "        #     fill_method = input(\"Enter 'mean', 'median', 'mode', or a specific value: \")\n",
+    "        #     if fill_method == \"mean\":\n",
+    "        #         df.fillna(df.mean(), inplace=True)\n",
+    "        #     elif fill_method == \"median\":\n",
+    "        #         df.fillna(df.median(), inplace=True)\n",
+    "        #     elif fill_method == \"mode\":\n",
+    "        #         df.fillna(df.mode().iloc[0], inplace=True)\n",
+    "        #     else:\n",
+    "        #         df.fillna(fill_method, inplace=True)\n",
+    "        #     print(\"\\nMissing values filled successfully!\")\n",
     "        elif choice == \"6\":\n",
     "            print(\"\\nRenaming columns:\")\n",
     "            print(\"Current columns:\", list(df.columns))\n",
@@ -861,31 +965,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=True\n",
-    "while(b):\n",
-    "    print(\"1. Analyze Data\")\n",
-    "    print(\"2. Edit Data\")\n",
-    "    print(\"3. Cleaning Data\")\n",
-    "    print(\"4. Sort Folder\")\n",
-    "    print(\"5. Exit\")\n",
-    "    choice=input(\"Enter Choice: \")\n",
-    "    if(choice==\"1\"):\n",
-    "        df = Load_Data()\n",
-    "        Analyze_Data(df)\n",
-    "    elif(choice==\"2\"):\n",
-    "        df = Load_Data()\n",
-    "        Edit_Data(df)\n",
-    "        pass\n",
-    "    elif(choice==\"3\"):\n",
-    "        print(3)\n",
-    "        pass\n",
-    "    elif(choice==\"4\"):\n",
-    "        print(4)\n",
-    "    elif(choice==\"5\"):\n",
-    "          print(\"Exiting Program...\")\n",
-    "          b=False\n",
-    "    else:\n",
-    "        print(\"Please Enter Valid Choice !\")\n",
+    "\n",
+    "# df=pd.read_csv('C:\\\\Users\\\\Shivam\\\\Downloads\\\\archive (3)\\\\covid_toy.csv')\n",
+    "# engine = create_engine(\"mysql+pymysql://root:@localhost/data_analysis\")\n",
+    "# df.to_sql('covid', con=engine, if_exists=\"replace\", index=False)\n",
+    "\n",
+    "# con=get_connection()\n",
+    "# table='covid'\n",
+    "# sql=f'select * from {table}'\n",
+    "# df = pd.read_sql(sql, con)\n",
+    "# print(df.head())\n",
+    "\n",
+    "def main():\n",
+    "    b=True\n",
+    "    while(b):\n",
+    "        print(\"1. Analyze Data\")\n",
+    "        print(\"2. Edit Data\")\n",
+    "        print(\"3. Cleaning Data\")\n",
+    "        print(\"4. Sort Folder\")\n",
+    "        print(\"5. Exit\")\n",
+    "        choice=input(\"Enter Choice: \")\n",
+    "        if(choice==\"1\"):\n",
+    "            df = Load_Data()\n",
+    "            Analyze_Data(df)\n",
+    "        elif(choice==\"2\"):\n",
+    "            df = Load_Data()\n",
+    "            Edit_Data(df)\n",
+    "            pass\n",
+    "        elif(choice==\"3\"):\n",
+    "            print(3)\n",
+    "            pass\n",
+    "        elif(choice==\"4\"):\n",
+    "            print(4)\n",
+    "        elif(choice==\"5\"):\n",
+    "            print(\"Exiting Program...\")\n",
+    "            b=False\n",
+    "        else:\n",
+    "            print(\"Please Enter Valid Choice !\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    b1=True\n",
+    "\n",
+    "    while b1:\n",
+    "        print(\"1. Log In\")\n",
+    "        print(\"2. Sign Up\")\n",
+    "        print(\"3. Exit\")\n",
+    "        choice=input()\n",
+    "        if choice=='1':\n",
+    "            con=get_connection()\n",
+    "            cur=con.cursor()\n",
+    "            email=input('Enter Email: ')\n",
+    "            password=input('Enter Password: ')\n",
+    "            encr=hashlib.sha256(password.encode()).hexdigest()\n",
+    "            sql= 'select * from users where user_email=%s and user_password=%s'\n",
+    "            cur.execute(sql, (email,encr,))\n",
+    "            op=cur.fetchone()\n",
+    "            if not op:\n",
+    "                print('User Not found with the given credentials !')\n",
+    "            else:\n",
+    "                u=User(op[1], email, password, 0)\n",
+    "                u.setId(op[0])\n",
+    "                main()\n",
+    "                \n",
+    "\n",
+    "        elif choice=='2':\n",
+    "            name=input('Enter Name: ')\n",
+    "            em=True\n",
+    "            while(em):\n",
+    "                email=input('Enter Email: ')\n",
+    "                if email.find('@gmail.com')!=-1:\n",
+    "                    em=False\n",
+    "                else:\n",
+    "                    print('Email must contain \"@gmail.com\" !')\n",
+    "            passw=input('Enter Password: ')\n",
+    "            con=get_connection()\n",
+    "            cur=con.cursor()\n",
+    "            sql= 'select * from users where user_email=%s'\n",
+    "            cur.execute(sql, (email,))\n",
+    "            op=cur.fetchone()\n",
+    "            if not op:\n",
+    "               u=User(name, email, passw, 1)\n",
+    "               main()\n",
+    "            else:\n",
+    "                print('User already exists !')\n",
+    "\n",
+    "        else:\n",
+    "            b1=False\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\archive (3)\\\\covid_toy.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data_Udated.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data_1.csv\n",
